<resources>
    <string name="app_name">BuildingInformationOfJUST</string>
    <string name="name_text">ADMIN</string>
    <string name="name_text1">BANGABANDHU SHEIKH MUJIB ACADEMIC BUILDING</string>
    <string name="name_text2">LIBRARY BUILDING</string>
    <string name="name_text3">ADMINISTRATIVE BUILDING</string>
    <string name="name_text4">MEDICAL BUILDING</string>
    <string name="name_text5">SHAHEED MOSHIUR RAHMAN HALL</string>
    <string name="name_text6">SHEIKH HASINA HALL</string>
    <string name="name_text7">Logout</string>
    <string name="name_text8">STUDENTS ROOM</string>
    <string name="name_text9">TEACHERS ROOM</string>
    <string-array name="BSMADept_names">


        <item> FACULTY OF ENGINEERING AND TECHNOLOGY </item>
        <item>Computer Science And Engineering</item>
        <item>Electrical And Electronics Engineering</item>
        <item>Industrial And Production Engineering</item>
        <item>Chemical Engineering</item>
        <item>Petroleum and Mining Engineering </item>
        <item></item>
        <item> FACULTY OF SCIENCE</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Mathematics</item>
        <item></item>
        <item> FACULTY OF BIOLOGICAL SCIENCE AND TECHNOLOGY </item>
        <item>Pharmacy</item>
        <item>Microbiology</item>
        <item>Fisheries and Marine Bioscience</item>
        <item>Genetic Engineering and Biotechnology</item>
        <item></item>
        <item> FACULTY OF APPLIED SCIENCE AND TECHNOLOGY </item>
        <item>Environmental Science and Technology </item>
        <item>Nutrition and Food Technology</item>
        <item>Agro Product Processing Technology </item>

    </string-array>
    <string-array name="LBDept_names">

        <item> FACULTY OF BUSINESS STUDIES</item>
        <item>Accounting and Information Systems </item>
        <item>Management</item>
        <item>Finance and Banking </item>
        <item>Marketing</item>
        <item></item>
        <item> FACULTY OF HEALTH SCIENCE </item>
        <item>Physical Education and Sports Science</item>
        <item></item>
        <item> FACULTY OF ARTS AND SOCIAL SCIENCE </item>
        <item>English</item>
        <item>Bangla</item>

    </string-array>
    <string-array name="AB_rooms">

        <item>AGRANI Bank</item>
        <item>Cyber Center</item>
        <item>Conference Room</item>
        <item>Office Of The Vice Chancellor</item>
        <item>Office Of The Treasurer</item>
        <item>Office Of The Registrar</item>
        <item>Office Of The Ict cell</item>
        <item>Office Of The Librarian</item>
        <item>Office Of The The Provost</item>
        <item>Office Of The Proctor</item>
        <item>Office Of The Student Counseling and Guidance</item>
        <item>Office Of The Director of Accounts</item>
        <item>Office of The Director of Planing,Development and Works</item>
        <item>Office of The Controller of Examinations</item>
        <item>Office of The Cheif Medical Officer</item>
        <item>Public Relation Brance (Register Office)</item>
        <item>Office Of The Principle(JUST School and college) </item>


    </string-array>
    <string-array name="MBDept_names">

        <item>FACULTY OF ENGINEERING AND TECHNOLOGY </item>
        <item>Biomedical Engineering </item>
        <item>Textile Engineering</item>
        <item>Leather Engineering</item>
        <item></item>
        <item> FACULTY OF BIOLOGICAL SCIENCE </item>
        <item>Phisiotherapy And Rehabilitation</item>
        <item></item>
        <item>Health Center</item>

    </string-array>
    <string-array name="SMRH_rooms">

        <item>Provost Room</item>
        <item>Dining Room</item>
        <item>Reading Room</item>
        <item>Common Room</item>
        <item>TV Room</item>
        <item>Students Room</item>

    </string-array>
    <string-array name="SHH_rooms">

        <item>Provost Room</item>
        <item>Dining Room</item>
        <item>Reading Room</item>
        <item>Common Room</item>
        <item>TV Room</item>
        <item>Students Room</item>

    </string-array>
    <string-array name="CSEdept_Student_Room">

        <item>
            1st Year\n
            Class Room:203\n
            Lab Room:201
        </item>
        <item>
            2nd Year\n
            Class Room:202(A)\n
            Lab Room:201
        </item>
        <item>
            3rd Year\n
            Class Room:202(B)\n
            Lab Room:440
        </item>
        <item>
            4th Year\n
            Class Room:201\n
            Lab Room:440
        </item>
        <item>
            MSc\n
            Class Room:\n
            Lab Room:
        </item>

    </string-array>
    <string-array name="CSEdept_Teacher_Room">

        <item>
            Dr. Syed Md. Galib\n
            Associate Professor and Chaiman\n
            Mobile: 01709818108\n
            Room:218
        </item>
        <item>
            Dr. Md. Alam Hossain\n
            Assistant Professor\n
            Mobile: 01749-032411\n
            Room:222
        </item>
        <item>
            Dr. Md Asif Nashiry\n
            Assistant Professor\n
            Mobile: \n
            Room:215
        </item>
        <item>
            Engr. Md. Arif Rahman\n
            Assistant Professor\n
            Mobile:\n
            Mobile: 01717283829\n
            Room:222
        </item>

        <item>
            Nazmul Hossain\n
            Assistant Professor\n
            Mobile: 01717249730\n
            Room:219
        </item>

        <item>
            Md. Al-Amin\n
            Assistant Professor\n
            Mobile: \n
            Room:512
        </item>

        <item>
            Mohammad Nowsin Amin Sheikh\n
            Assistant Professor\n
            Mobile: 01714492550\n
            Room:216
        </item>

        <item>
            Md. Yasir Arafat\n
            Assistant Professor\n
            Mobile: 01743754783\n
            Room:214
        </item>

        <item>
            Monishanker Halder\n
            Lecturer\n
            Mobile: 01727653115\n
            Room:216
        </item>

        <item>
            Jannatul Ferdush\n
            Lecturer\n
            Mobile: 01731791101\n
            Room:221
        </item>

        <item>
            Md. Shaifuzzam\n
            Lecturer\n
            Mobile: 01731283290\n
            Room:218
        </item>

        <item>
            Atish Kumar Dipongkor\n
            Lecturer\n
            Mobile: 01521255151\n
            Room:221
        </item>

        <item>
            Jabed Al Faysal\n
            Lecturer\n
            Mobile: 01942295838\n
            Room:214
        </item>

        <item>Office Room:217</item>


    </string-array>
    <string-array name="EEEdept_Student_Room">

         <item>
            1st Year\n
            Class Room:203\n
            Lab Room:201
        </item>
        <item>
            2nd Year\n
            Class Room:202(A)\n
            Lab Room:201
        </item>
        <item>
            3rd Year\n
            Class Room:202(B)\n
            Lab Room:440
        </item>
        <item>
            4th Year\n
            Class Room:201\n
            Lab Room:440
        </item>
        <item>
            MSc\n
            Class Room:\n
            Lab Room
        </item>
    </string-array>
    <string-array name="EEEdept_Teacher_Room">

          <item>
            MD. AMZAD HOSSAIN, DR. ENG.\n
            Associate Professor and Chairman\n
            Room:212
        </item>
        <item>
            DR. MD. TANVIR HASAN\n
            Assistant Professor\n
            Room:219
        </item>
        <item>
            MD. MOZNUZZAMAN\n
            Assistant Professor\n
            Room:218
        </item>
        <item>
            MD. MASUD RANA\n
            Assistant Professor\n
            Room:216
        </item>

        <item>
            MD. BIPLOB HOSSAIN\n
            Lecturer\n
            Room:216
        </item>

        <item>
           MD. TANVIR AHAMMED\n
            Lecturer\n
            Room:512
        </item>

        <item>
            MD. TARIQUZZAMAN\n
            Lecturer\n
            Room:211
        </item>

        <item>
            MD. MEHEDI HASAN\n
            Lecturer\n
            Room:217
        </item>

        <item>
            SHARADINDU GOPAL KIRTANIA\n
            Lecturer\n
            Room:211
        </item>

        <item>Office Room:213</item>


    </string-array>
    <string-array name="IPEdept_Student_Room">

        <item>
            1st Year\n
            Class Room:102\n
            Lab Room:233
        </item>
        <item>
            2nd Year\n
            Class Room:115\n
            Lab Room:233
        </item>
        <item>
            3rd Year\n
            Class Room:118\n
            Lab Room:233
        </item>
        <item>
            4th Year\n
            Class Room:102\n
            Lab Room:233
        </item>
        <item>
            MSc\n
            Class Room:\n
            Lab Room:
        </item>

    </string-array>
    <string-array name="IPEdept_Teacher_Room">

         <item>
           DR. A.S.M MOJAHIDUL HOQUE\n
            Associate Professor and Chairman\n
            Room:712
        </item>
        <item>
            SARAJIT KUMAR BISWAS\n
            Assistant Professor\n
            Room:711
        </item>
        <item>
            SAMRAT KUMAR DEY\n
            Assistant Professor\n
            Room:711
        </item>
        <item>
            TARUN KUMAR BISWAS\n
            Assistant Professor\n
            Room:711
        </item>

        <item>
            MD. TAHIDUZZAMAN\n
            Lecturer\n
            Room:710
        </item>

        <item>
            MD. SUMON RAHMAN\n
            Lecturer\n
            Room:710
        </item>

        <item>
            MUSTAFIZUR RAHMAN\n
            Lecturer\n
            Room:710
        </item>

        <item>
            ABID HOSSAIN KHAN\n
            Lecturer\n
            Room:709
        </item>

        <item>
            S.M. TAZIM AHMED\n
            Lecturer\n
            Room:709
        </item>

        <item>Office Room:713</item>

    </string-array>
    <string-array name="ChEdept_Student_Room">

        <item>
            1st Year\n
            Class Room:205\n
            Lab Room:203
        </item>
        <item>
            2nd Year\n
            Class Room:206(A)\n
            Lab Room:203
        </item>
        <item>
            3rd Year\n
            Class Room:206(B)\n
            Lab Room:203
        </item>
        <item>
            4th Year\n
            Class Room:207\n
            Lab Room:203
        </item>
        <item>
            MSc\n
            Class Room:\n
            Lab Room:
        </item>

    </string-array>
</resources>