<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/name_textId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAllCaps="true"
        android:hint="@string/name_text"
        android:textColorHint="@color/violet"
        android:contextClickable="true"
        android:textSize="15sp"
        android:background="@color/green"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="270dp"
        android:layout_marginRight="200dp"
        android:layout_marginLeft="5dp" />

    <Button
        android:id="@+id/name2_textId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColorHint="@color/colorAccent"
        android:hint="@string/name_text1"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:padding="15dp"
        android:background="@color/orrange"
        />

    <Button
        android:id="@+id/name3_textId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="@string/name_text2"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:padding="15dp"
        android:textColorHint="@color/violet"
        android:background="@color/orrange"

        />

    <Button
        android:id="@+id/name4_textId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="@string/name_text3"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:padding="15dp"
        android:textColorHint="@color/green"
        android:background="@color/orrange"

        />

    <Button
        android:id="@+id/name5_textId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@color/orrange"
        android:hint="@string/name_text4"
        android:padding="15dp"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textColorHint="@color/yellow"
        android:textSize="20sp"
        android:textStyle="bold"

        />
  <Button
        android:id="@+id/name6_textId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="@string/name_text5"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:padding="15dp"
        android:textColorHint="@color/blue"
        android:background="@color/orrange"

        />
  <Button
        android:id="@+id/name7_textId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="@string/name_text6"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:padding="15dp"
        android:textColorHint="@color/gblue"
        android:background="@color/orrange"

        />


</LinearLayout>
